--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^6.7.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20"
   }
